# graph_solvers

./: .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  branches.txt
Libs/Clang/include/graph_solvers/: graphs.h  oil_transport.h
documents/serialization/: batch_results.json  bounds_format.json  multilayer_bounds_format.json  results_json_format.md  settings_format.json
msvc_cmake/: readme.txt
netadapter/: CSAdapter.sln  README.md
netadapter/GraphSolversAdapter/: GraphSolversAdapter.cpp
netadapter/GraphSolversNet/: GraphSolvers.cs  GraphSolversAPI.cs  GraphSolversNet.csproj
netadapter/GraphSolversNet/Properties/: launchSettings.json
netadapter/Tests/: GraphSolversAPITests.cs  GraphSolversTask.cs  Tests.csproj
pipeline/pipeline_result/dotnet_tests_out/: netadapter_tests_out.txt  netadapter_tests_out.xml
pipeline/pipeline_result/tests_out/: research_oiltransport_out.txt  research_oiltransport_out.xml  testing_graphs_out.txt  testing_graphs_out.xml  testing_hydronet_out.txt  testing_hydronet_out.xml  testing_oiltransport_out.txt  testing_oiltransport_out.xml
pipeline/pipeline_scripts/: build.sh  defining_branch.sh  doxygen_test.sh  netadapter_build.sh  netadapter_tests.sh  tests_start.sh
src/: graphs.h  hydronet.h  oil_transport.h
src/graphs/: basic_graph.h  general_structured_graph.h  graph_bicomps_algorithms.h  graph_bindings.h  graph_exception.h
src/graphs/helpers/: invertex_index.h  set_helpers.h  vector_helpers.h
src/hydronet/: helpers.h  redundant_flows_corrector.cpp  redundant_flows_corrector.h
src/hydronet/block_tree/: endogenous_propagator.h  flow_propagator.h  transport_block_solver.h
src/hydronet/flow_solvers/: nodal_solver.h  nodal_solver_buffer_based.h  renumber_pressure_vertex.h
src/hydronet/structured_solvers/: structured_hydro_solver.h  structured_transport_solver.h
src/hydronet/topology/: topology.h  zeroflow.h
src/oil_transport/: graph_builder.h  hydro_task.h  hydro_transport_task.h  transport_batch_profiles.h  transport_buffer.h  transport_mixer.cpp  transport_task.cpp  transport_task.h
src/oil_transport/measurements/: graph_timeseries.cpp  transport_measurements.cpp  transport_measurements.h  transport_measurements_funcs.cpp  transport_measurements_funcs.h
src/oil_transport/models_hydro/: check_valve.h  hydro_local_resistance.h  hydro_model_interface.h  hydro_pipe.h  hydro_source.h  simple_bufferless_models.h
src/oil_transport/models_transport/: transport_lumped.h  transport_model_interface.h  transport_pipe.h  transport_source.h
src/oil_transport/serialization/: graph_parser.cpp  graph_parser.h  json_model_parameters.h  results_serialization.h  settings_parser.h
src/oil_transport/solvers_buffered_decorators/: transport_block_solver_buffered.h  transport_graph_solver_buffered.h
testing/oiltransport_schemes/chain_scheme_nonsequential_vertices/: chain_scheme_nonsequential_vertices.vsdx  topology.json  valve_data.json
testing/oiltransport_schemes/cold_tu/: lumped_data.json  pipe_data.json  pump_data.json  source_data.json  topology.json
testing/oiltransport_schemes/hydro_pipe_test/: hydro_pipe_test.vsdx  source_data.json  topology.json  valve_data.json
testing/oiltransport_schemes/line_pipe/: line_pipe.vsdx  pipe_data.json  source_data.json  topology.json  valve_data.json
testing/oiltransport_schemes/main_pump_station_with_line_pipe/: check_valve_data.json  main_pump_station_with_line_pipe.vsdx  pipe_data.json  pump_data.json  source_data.json  topology.json  valve_data.json
testing/oiltransport_schemes/oil_pump_station/: check_valve_data.json  oil_pump_station.vsdx  pump_data.json  source_data.json  topology.json  valve_data.json
testing/oiltransport_schemes/pipe_with_tail_source/: lumped_data.json  pipe_data.json  pipe_with_tail_source.vsdx  source_data.json  topology.json
testing/oiltransport_schemes/pipe_with_two_sources/: lumped_data.json  pants_two_sources.vsdx  source_data.json  topology.json
testing/oiltransport_schemes/pipe_with_two_sources_no_bik/: lumped_data.json  pants_two_sources_no_bik.vsdx  source_data.json  topology.json
testing/oiltransport_schemes/two_components/: source_data.json  topology.json  two_components.vsdx  valve_data.json
testing/oiltransport_schemes/two_valves/: source_data.json  topology.json  two_valves.vsdx  valve_data.json
testing/research_oilnet/: 2025-density.cpp  research_oilnet.cpp  research_oilnet.h
testing/research_oilnet_out/QSMDensity.Research/: sikn_02_2024.csv
testing/research_oilnet_out/QSMFlowsDensity.Density_CondensatePipe/: plot_with_filter.py  run_plot_with_filter.py
testing/research_oilnet_out/QSMFlowsDensity.Density_hottu/: plot_output_build.py  plot_with_filter_build.py
testing/research_oilnet_out/QSMFlowsDensity.Flows_CondensatePipe/: flows.csv
testing/test_chemdae/: TestDAE.h  test_chemdae.cpp  test_chemdae.h
testing/test_graphs/: BiconnectedComponentsTests.h  BlockTreeTopologicalSort.h  MatrixIncidences.h  test_graphs.cpp  test_graphs.h
testing/test_hydronet/: BreakSplittables.h  test_hydronet.cpp  test_hydronet.h
testing/test_oilnet/: TestGGA.cpp  TestGraphBuilder.h  TestHydro.h  TestHydroPipe.cpp  TestMixer.h  test_oilnet.cpp  test_oilnet.h
testing/test_oilnet/BlockPropagationSolver/: BlockPropConfidence.h  BlockPropEndogenous.h
testing/test_oilnet/GraphPropagationSolver/: FullPropConfidence.h  FullPropEndogenous.h  FullPropFlow.h
testing/test_oilnet/ModelsHydro/: LocalResistance.h  Pump.h
testing/test_oilnet/NodalSolver/: TestNodalSolver.h  TestNodalSolverBufferBase.h  TestNodalSolverRenumbering.h
testing/test_oilnet/Serialization/: TestBoundParserJson.h  TestGraphParser.h  TestResultSerialization.h  TestSettingsParser.h
testing/test_oilnet/Task/: CustomPipeSolver.h  HydroTask.h  HydroTransportTask.h  MeasurementsCompleteness.h  MeasurementsFuncs.h  TaskControlsHandling.h  TaskMeasuresHandling.h
testing/test_oilnet/utils/: scheme_loaders.h  serialization_utils.h  simple_scheme.h  task_test_utils.h
testing/tools/: plot_output.py  plot_with_filter.py
(+260 files in other folders)
